--- a/src/index.css
+++ b/src/index.css
@@ -41,3 +41,38 @@ table.border-collapse {
 td.border-none {
     border: none;
 }
+
+.swiper-pagination-bullet {
+    background: white !important;
+}
+
+.swiper-pagination-bullet-active {
+    background: #E5CF8E !important;
+}
+
+.landing-page-section {
+    background-image: url('./assets/header.png');
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    position: relative;
+}
+
+.landing-page-section::before {
+    content: '';
+    position: absolute;
+    inset: 0;
+    background: rgba(0, 0, 0, 0.5);
+    z-index: 1;
+}
+
+@font-face {
+    font-family: 'STKaiti';
+    src: url('./assets/STKaiti.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+.font-STKaiti {
+    font-family: 'STKaiti', sans-serif;
+}
